@@ -4,7 +4,7 @@ sphinx:
 build:
   os: ubuntu-24.04
   tools:
-    python: '3.10'
+    python: '3.11'
 python:
   install:
     - method: pip
