@@ -68,6 +68,10 @@ Additional tasks:
 - run docs: Build the Sphinx documentation for readthedocs.io
 - run docs -o: Build the Sphinx documentation and open in a browser
 - run release: Tag and release the code, triggering GHA to publish artifacts
+
+The Python interpreter version is controlled by the .python-version file.  To
+test with a different version of Python temporarily, set $UV_PYTHON in your
+shell, and execute 'run install'.  Make sure to unset and reinstall when done.
 ```
 
 ## Integration with PyCharm
